--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,20 +5,6 @@ body {
     background-color: #dfe7ee;
 }
 
-/* header {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    padding: 10px;
-    z-index: 1;
-}
-
-main {
-    margin-top: 250px;
-    z-index: 1;
-} */
-
 .col-heading {
     margin-left: 40px;
     margin-right: 40px
@@ -30,7 +16,7 @@ main {
 
 .section-details {
     background-color: #dffcff;
-    border-color:#af9442;
+    border-color:#8913b0;
 }
 
 .bg-color-contact {
@@ -90,6 +76,10 @@ p {
     padding-bottom: 10px;
 }
 
+.top-pad {
+    padding-top: 20px;
+}
+
 /*--------------------------------------------Heading*/
 
 #header-details {
@@ -141,6 +131,10 @@ p {
     margin: auto;
 }
 
+.center-img {
+    text-align:center;
+}
+
 /*--------------------------------------------footer*/
 
 footer {
@@ -158,7 +152,7 @@ footer {
     height: 32px;
     padding: 12px 0;
     border-radius: 50%;
-    font-size: 30px;
+    font-size: 20px;
     line-height: 7px;
     text-align: center;
     color: #000000;
@@ -242,13 +236,69 @@ button[type="submit"] {
     background-color: #a4c8ef;
 }
 
+.modal-btn {
+    font-size: 44px;
+    font-weight: 500;
+    color: #8913b0;
+    background-color: #2e89e9;
+}
+
 .btn-lg:hover {
     background-color: #8913b0;
     color: #4203bf;
     font-weight: 500;
 }
 
+/* ----------------------------------------The Modal (background) */
+.modal {
+    display: none; 
+    position: fixed; 
+    z-index: 1; 
+    width: 100%; 
+    height: 100%; 
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); 
+    background-color: rgba(0, 0, 0, 0.6); /* Black w/ opacity */
+  }
+  
+  .contact-modal-content {
+    background-color: #94c2e7;
+    margin: 15% auto; /* 15% from the top and centered */
+    padding: 20px;
+    border: 5px solid #8913b0;
+    border-radius: 5%;
+    width: 80%; 
+  }
+
+  .modal-backdrop {
+    position: relative;
+  }
+  
+  .closeM {
+    color: #8913b0;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+  }
+  
+  .closeM:hover,
+  .closeM:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+  }
+
 /* ----------------------------------------Media Queries */
+
+/* Amend modal width and height on larger screen sizes. */
+
+@media (min-width: 1400px) {
+    .contact-modal-content {
+        width: 50%;
+    }
+}
+
+
 
 /* ----------------------------------------resize menu items and text for bigger  and ultra smallscreens*/
 
