--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -263,7 +263,7 @@ button[type="submit"] {
   
   .contact-modal-content {
     background-color: #94c2e7;
-    margin: 15% auto; /* 15% from the top and centered */
+    margin: 5% auto; /*top and centered */
     padding: 20px;
     border: 5px solid #8913b0;
     border-radius: 5%;
