add layout changes to index.html and menu buttons

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,7 +7,7 @@ body {
 
 .col-heading {
     margin-left: 40px;
-    margin-right: 40px
+    margin-right: 40px;
 }
 
 .inline-block {
@@ -57,7 +57,7 @@ h2 {
 p {
     font-family: 'Open+Sans', sans-serif;
     margin: 10px;
-    font-size: 14px;
+    font-size: 20px;
 }
 
 .uppercase {
@@ -78,6 +78,12 @@ p {
 
 .top-pad {
     padding-top: 20px;
+}
+
+.text-blue {
+    color:#4203bf;
+    font-weight: 600;
+    font-size:28px;
 }
 
 /*--------------------------------------------Heading*/
@@ -131,10 +137,13 @@ p {
     margin: auto;
 }
 
-.center-img {
-    text-align:center;
+.center-text {
+    text-align: center;
 }
 
+.center-img {
+    text-align: center;
+}
 /*--------------------------------------------footer*/
 
 footer {
@@ -215,11 +224,26 @@ textarea {
     resize: none;
 }
 
+
+.btn-block {
+    background-color: #e8edf3;
+    color: #4203bf;
+    border: 3px solid #8913b0;
+    font-weight: 600;
+}
+
+.btn-block:hover {
+    background-color: #4203bf;
+    color: #e8edf3;
+}
+
+
 .btn-secondary {
     background-color: #007bff;
     color: #082137;
     border-radius: 2rem;
     margin: 25px;
+    border: 5px solid #8913b0;
 }
 
 .btn-secondary:hover {
@@ -233,7 +257,7 @@ button[type="submit"] {
     font-size: 22px;
     font-weight: 500;
     color: #143049;
-    background-color: #a4c8ef;
+    background-color: #4a9df7;
 }
 
 .modal-btn {
@@ -243,11 +267,26 @@ button[type="submit"] {
     background-color: #2e89e9;
 }
 
+.btn-lg {
+    border-radius: 25%;
+    border: 3px solid #8913b0;
+}
+
+.btn-lg.active {
+    border-radius: 50%;
+}
+
 .btn-lg:hover {
     background-color: #8913b0;
     color: #4203bf;
     font-weight: 500;
 }
+
+/* .btn-heading {
+    margin-left: 15px;
+    margin-right: 15px;
+    width: 100%;
+} */
 
 /* ----------------------------------------The Modal (background) */
 .modal {
@@ -274,7 +313,7 @@ button[type="submit"] {
     position: relative;
   }
   
-  .closeM {
+  /* .closeM {
     color: #8913b0;
     float: right;
     font-size: 28px;
@@ -286,7 +325,7 @@ button[type="submit"] {
     color: black;
     text-decoration: none;
     cursor: pointer;
-  }
+  } */
 
 /* ----------------------------------------Media Queries */
 
@@ -298,7 +337,22 @@ button[type="submit"] {
     }
 }
 
-
-
 /* ----------------------------------------resize menu items and text for bigger  and ultra smallscreens*/
 
+@media (min-width: 900px) {
+    p {
+        font-size: 28px;
+    }
+}
+
+@media (min-width: 1800px) {
+    p {
+        font-size: 30px;
+    }
+}
+
+@media (min-width: 400px) {
+    .btn-block {
+        font-size: 28px;
+    }
+}
