--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -88,6 +88,18 @@ p {
     font-weight: 600;
 }
 
+.indent-para {
+    padding-left: 40px;
+}
+
+ul > li {
+    margin-left: 40px;
+}
+
+li {
+    margin-right: 20px;
+}
+
 /*--------------------------------------------Heading*/
 
 #header-details {
