Func: add 12 myth cards to myth page and css to style.css

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -181,6 +181,51 @@ li {
 .center-img {
     text-align: center;
 }
+
+/*--------------------------------------------flip card (myth) code*/
+.myth-card {
+    /* background-color: transparent; */
+    background-color: #dffcff;
+    width: 300px;
+    height: 300px;
+    perspective: 1000px;
+    padding: 10px;
+  }
+  
+  .myth-card-inner {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    transition: transform 0.6s;
+    transform-style: preserve-3d;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  }
+  
+  .myth-card:hover .myth-card-inner {
+    transform: rotateY(180deg);
+  }
+  
+  .myth-card-front, .myth-card-back {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    border-radius: 10%;
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+  }
+  
+  .myth-card-front {
+    background-color: #8913b0;
+    color: #f0f0f0;
+  }
+  
+  .myth-card-back {
+    background-color: #2980b9;
+    color: white;
+    transform: rotateY(180deg);
+  }
+
 /*--------------------------------------------footer*/
 
 footer {
@@ -296,9 +341,6 @@ button[type="submit"] {
     margin-bottom: 20px;
     font-size: 22px;
     font-weight: 500;
-    color: #143049;
-    background-color: #4a9df7;
-
 }
 
 .modal-btn {
