--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -90,10 +90,10 @@ p {
     padding-right: 25px;
 }
 
-/* .blue-text {
+.blue-text {
     color:#4203bf;
     font-weight: 600;
-} */
+}
 
 .purple-text {
     color:#e94e69 !important;
@@ -113,6 +113,11 @@ li {
 
 .content-hidden {
     display: none;
+}
+
+.myth-card-text {
+    font-size: 1.1rem;
+    color: #f0f0f0;
 }
 
 /*--------------------------------------------Heading*/
@@ -449,6 +454,15 @@ button[type="submit"] {
 
 /* ----------------------------------------resize menu items and text for bigger  and ultra smallscreens*/
 
+/* minor change to social links on small screens */
+@media (max-width: 575px) {
+.social-links li a i {
+    width:26px;
+    height: 26px;
+    font-size: 18px;
+    }
+}
+
 @media (min-width: 768px) {
     .btn-block {
         font-size: 22px;
@@ -518,5 +532,37 @@ button[type="submit"] {
 @media (min-width: 2000px) {
     .img-myth { 
         width: 30%;
+    }
+}
+
+@media  (max-width: 401px)  {
+    .myth-card-text {
+        font-size: 0.8rem;
+    }
+}
+
+@media  (min-width: 501px) and (max-width: 767px)  {
+    .myth-card-text {
+        font-size: 1.2rem;
+    }
+}
+
+@media  (min-width: 768px) and (max-width: 967px)  {
+    .myth-card-text {
+        font-size: 0.9rem;
+    }
+}
+
+/* 968 range most common screen size so default font-size. */
+
+@media  (min-width: 1401px) and (max-width: 2400px)  {
+    .myth-card-text {
+        font-size: 1.4rem;
+    }
+}
+
+@media  (min-width: 2401px) {
+    .myth-card-text {
+        font-size: 1.8rem;
     }
 }
