--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -115,11 +115,6 @@ li {
     display: none;
 }
 
-.myth-card-text {
-    font-size: 1.1rem;
-    color: #f0f0f0;
-}
-
 /*--------------------------------------------Heading*/
 
 #header-details {
@@ -217,11 +212,10 @@ li {
 /*--------------------------------------------flip card (myth) code*/
 .myth-card {
     background-color: #dffcff;
-    /* width: 300px;
-    height: 300px; */
-    width: 100%;
-    height: 500px;
-    perspective: 1000px;
+    width: 300px;
+    height: 300px;
+    /* width: 100%;
+    height: 500px; */
     padding: 30px;
     margin-left: 15px;
     margin-right: 15px;
@@ -253,6 +247,9 @@ li {
   
   .myth-card-front {
     background-color: #8913b0;
+    background-image: url("../../assets/images/disease.jpg");
+    background-position: center; 
+    background-repeat: no-repeat;    
     color: #f0f0f0;
     border: 10px solid #2980b9;
   }
@@ -264,6 +261,10 @@ li {
     transform: rotateY(180deg);
   }
 
+  .myth-card-text {
+    font-size: 0.5rem;
+    color: #f0f0f0;
+}
 /*--------------------------------------------footer*/
 
 footer {
@@ -535,34 +536,74 @@ button[type="submit"] {
     }
 }
 
-@media  (max-width: 401px)  {
-    .myth-card-text {
-        font-size: 0.8rem;
-    }
-}
 
-@media  (min-width: 501px) and (max-width: 767px)  {
-    .myth-card-text {
-        font-size: 1.2rem;
-    }
-}
-
-@media  (min-width: 768px) and (max-width: 967px)  {
-    .myth-card-text {
-        font-size: 0.9rem;
-    }
-}
 
 /* 968 range most common screen size so default font-size. */
 
-@media  (min-width: 1401px) and (max-width: 2400px)  {
-    .myth-card-text {
-        font-size: 1.4rem;
+@media (max-width: 327px) {
+    .myth-card-front h1 {
+        color: #8913b0;
     }
 }
 
-@media  (min-width: 2401px) {
+
+
+@media  (min-width: 327px) and (max-width: 767px) {
+    .myth-card {
+        width: 800px;
+        height: 800px;
+    }
+}
+
+@media  (min-width: 327px) and (max-width: 599px) {
+    .myth-card-text {
+        font-size: 1.1rem;
+    }
+}
+
+@media  (min-width: 600px) and (max-width: 767px) {
     .myth-card-text {
         font-size: 1.8rem;
+    }
+}
+
+@media  (min-width: 768px) and (max-width: 1199px) {
+    .myth-card {
+        width: 500px;
+        height: 700px;
+    }
+    .myth-card-text {
+        font-size: 1.1rem;
+    }
+}
+
+@media (min-width: 900px) and (max-width: 1026px) {
+    .myth-card-text {
+        font-size: 1.28rem;
+    }
+}
+
+@media (min-width: 1027px) and (max-width: 1199px) {
+    .myth-card-text {
+        font-size: 1.5rem;
+    }
+}
+
+@media  (min-width: 1200px) {
+    .myth-card {
+        width: 800px;
+        height: 800px;
+    }
+}
+
+@media  (min-width: 1200px) and (max-width: 1887px) {
+    .myth-card-text {
+        font-size: 1.5rem;
+    }
+}
+
+@media  (min-width: 1887px) {
+    .myth-card-text {
+        font-size: 2.0rem;
     }
 }
