--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -83,12 +83,12 @@ p {
     padding-top: 20px;
 }
 
-.no-margin {
+/* .no-margin {
     margin-left: 25px;
     margin-right: 25px;
     padding-left: 25px;
     padding-right: 25px;
-}
+} */
 
 .blue-text {
     color:#4203bf;
@@ -214,8 +214,6 @@ li {
     background-color: #dffcff;
     width: 300px;
     height: 300px;
-    /* width: 100%;
-    height: 500px; */
     padding: 30px;
     margin-left: 15px;
     margin-right: 15px;
@@ -228,10 +226,9 @@ li {
     text-align: center;
     transition: transform 0.6s;
     transform-style: preserve-3d;
-    /* box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2); */
   }
 
-  /* updated via jQuery on mouse click */
+  /* updated from hover to mouse click via jQuery*/
   .myth-card-flipped .myth-card-inner {
     transform: rotateY(180deg);
   }
@@ -461,6 +458,7 @@ button[type="submit"] {
     width:26px;
     height: 26px;
     font-size: 18px;
+    padding: 11px 0;
     }
 }
 
@@ -540,13 +538,12 @@ button[type="submit"] {
 
 /* 968 range most common screen size so default font-size. */
 
-@media (max-width: 327px) {
-    .myth-card-front h1 {
-        color: #8913b0;
+/* remove images on myth cards below 326px */
+@media (max-width: 326px) {
+    .myth-card-front {
+        background-image: none;
     }
 }
-
-
 
 @media  (min-width: 327px) and (max-width: 767px) {
     .myth-card {
