--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -242,7 +242,7 @@ li {
   
   .myth-card-front {
     background-color: #8913b0;
-    /* background-image: url("../assets/images/disease.jpg"); */
+    background-image: url("/assets/images/disease.jpg");
     background-position: center; 
     background-repeat: no-repeat;    
     color: #f0f0f0;
