--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -318,15 +318,15 @@ li {
 }
 
 #next-btn {
-    background: #55076e;
+    background: #4203bf;
     color: #fff;
     font-size:25px;
     font-weight: 500;
-    width: 75%;
+    width: 60%;
     border: 3px solid #8913b0;
     padding: 10px;
     margin: 20px auto 0;
-    border-radius: 5%;
+    border-radius: 50px;
     cursor: pointer;
     display: none;
 }
@@ -334,6 +334,9 @@ li {
 #quizTrigger {
     padding: 10px;
     margin: 50px 0 40px;
+    border: 3px solid #8913b0;
+    border-radius: 50px;
+    background-color: #188334;
 
 }
 
