--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -224,7 +224,7 @@ li {
     position: absolute;
     width: 100%;
     height: 100%;
-    border-radius: 10%;
+    border-radius: 35px;
     -webkit-backface-visibility: hidden;
     backface-visibility: hidden;
   }
@@ -335,7 +335,7 @@ li {
     padding: 10px;
     margin: 50px 0 40px;
     border: 3px solid #8913b0;
-    border-radius: 50px;
+    border-radius: 2rem;
     background-color: #188334;
 
 }
@@ -430,6 +430,7 @@ textarea {
     margin-top: 50px;
     text-align: left;
     padding: 0 20px;
+    border-radius: 2rem;
 }
 
 .btn-block:hover {
@@ -469,7 +470,7 @@ button[type="submit"] {
 }
 
 .btn-lg {
-    border-radius: 25%;
+    border-radius: 2rem;
     border: 3px solid #8913b0;
     font-size: .5rem;
 }
